--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,18 +7,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Setup MSVC (C++ Compiler)
       uses: ilammy/msvc-dev-cmd@v1
 
     - name: Compile Cheat Panel
       run: |
-        cl.exe /nologo /EHsc /std:c++17 /O2 /I src src/main.cpp src/memory/*.cpp src/imgui/*.cpp /Fe:GoharXiters.exe /link d3d11.lib d3dcompiler.lib dxgi.lib user32.lib kernel32.lib advapi32.lib
+        cl.exe /nologo /EHsc /std:c++17 /O2 /I src src/main.cpp src/memory/*.cpp src/imgui/*.cpp /Fe:GoharXiters.exe /link d3d11.lib d3dcompiler.lib dwmapi.lib dxgi.lib user32.lib kernel32.lib advapi32.lib
       shell: cmd
 
     - name: Upload EXE
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: GoharXiters-Cheat
         path: GoharXiters.exe
